visual changes, fixed static files

--- a/views/group.ejs
+++ b/views/group.ejs
@@ -4,33 +4,45 @@
     <title>Groups</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script type="text/javascript" src="/js/app.js"></script>
     <script type="text/javascript">
 
         function displayPost(data) {
             for(var p in data) {
                 post = data[p]
-                var numl = 0, numc = 0, msg = "";
+                var numl = 0, numc = 0, msg = "", date = "";
                 if(post.hasOwnProperty("likes"))
                     numl = post.likes.data.length
                 if(post.hasOwnProperty("comments"))
                     numc = post.comments.data.length
                 if(post.hasOwnProperty("message"))
                     msg = post.message
+                if(post.hasOwnProperty("created_time"))
+                    date = new Date(post.created_time);
+
+                var date_string = date.getMonth() + 1 + "/" + date.getDate() + "/" + date.getFullYear()
+
                 var base_url = "https://www.facebook.com/groups/<%= group_id %>/permalink/",
                     post_id = post.id.split("_")[1],
                     post_url = base_url + post_id;
 
-                var newli = "<a href=\"" + post_url + "\">[L: " + numl + " C: " + numc + "] " + msg.substring(0,40) + "...</a>"; 
-                console.log(post_id);
+                var newtr = '<tr><td>' + date_string + '</td><td><a target="_blank" href="' + post_url + '">' + msg.substring(0,80) + '...</a></td><td>'+post.from.name + '</td><td>Likes: ' + numl + '</td><td>Comments: ' + numc + '</td></tr>';
 
-                $("#fbPosts").append("<li>" + newli);
+                $("#fbPostsTable tbody").append(newtr);
             }
         }
 
         var token = "?access_token=<%= user.facebook.token %>";
         var url = "https://graph.facebook.com/v2.2/<%= group_id %>/feed" + token;
+
+        $(document).ready(function() {
+            $.get('https://graph.facebook.com/v2.2/<%= group_id %>/' + token, function(data) {
+                $("#pageHeader").text(data.name);
+                console.log(data.name)
+            });  
+        });
+        
 
         var next_url = "";
         next_url = url;
@@ -66,15 +78,29 @@
 </head>
 <body>
 <div class="container">
+    <a href="/groups"><span class="glyphicon glyphicon-arrow-left"></span> Back to Groups list</a>
 
-    <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span>Groups</h1>
-
-        <p>Hello <%= user.facebook.id %></p>
+    <div class="text-left">
+        <h3 id="pageHeader"></h3>
     </div>
 
     <ul id="fbPosts">
     </ul>
+
+    <table id="fbPostsTable" class="table">
+    <thead>
+        <tr><th>Date</th><th>Post</th><th>From</th><th>Likes</th><th>Comments</th></tr>
+    </thead>
+
+    <tfoot>
+        <tr><td></td><td></td><td></td><td></td><td></td></tr>
+    </tfoot>
+
+    <tbody>
+
+    </tbody>
+
+    </table>
 
     
 
